修改后，成功跑起来

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "startbe": "node ./bin/server",
+    "server": "node ./bin/server",
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.pro.js"
   },
@@ -23,6 +23,7 @@
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.0",
     "debug": "~2.6.0",
+    "ejs": "^2.5.6",
     "express": "~4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fetch-jsonp": "^1.0.6",
