--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "chunk-manifest-webpack-plugin": "^1.1.0",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.0",
     "debug": "~2.6.0",
     "ejs": "^2.5.6",
     "express": "~4.14.1",
+    "express-session": "^1.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "fetch-jsonp": "^1.0.6",
     "file-loader": "^0.11.1",
