--- a/package.json
+++ b/package.json
@@ -8,55 +8,54 @@
     "build": "webpack --config webpack.config.pro.js"
   },
   "dependencies": {
-    "antd": "^2.9.1",
-    "async": "^2.3.0",
-    "axios": "^0.16.1",
+    "antd": "2.9.1",
+    "async": "2.3.0",
+    "axios": "0.16.1",
     "axios-fileupload": "0.0.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-import": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "bcrypt": "^1.0.2",
-    "body-parser": "~1.16.0",
-    "chunk-manifest-webpack-plugin": "^1.1.0",
-    "connect-mongo": "^1.3.2",
-    "cookie-parser": "~1.4.3",
-    "css-loader": "^0.28.0",
-    "debug": "~2.6.0",
-    "ejs": "^2.5.6",
-    "express": "~4.14.1",
-    "express-session": "^1.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "fetch-jsonp": "^1.0.6",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "mongoose": "^4.9.4",
-    "morgan": "~1.7.0",
-    "multer": "^1.3.0",
-    "optimize-css-assets-webpack-plugin": "^1.3.1",
-    "postcss-loader": "^1.3.3",
-    "precss": "^1.4.0",
-    "react": "^15.5.4",
-    "react-custom-scrollbars": "^4.1.1",
-    "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
-    "serve-favicon": "~2.3.2",
-    "style-loader": "^0.16.1",
-    "underscore": "^1.8.3",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
-    "webpack-chunk-hash": "^0.4.0",
-    "webpack-dev-server": "^2.4.2"
+    "babel-core": "6.24.1",
+    "babel-loader": "6.4.1",
+    "babel-plugin-import": "1.1.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "bcrypt": "1.0.2",
+    "body-parser": "1.16.0",
+    "chunk-manifest-webpack-plugin": "1.1.0",
+    "cookie-parser": "1.4.3",
+    "css-loader": "0.28.0",
+    "debug": "2.6.0",
+    "ejs": "2.5.6",
+    "express": "4.14.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "fetch-jsonp": "1.0.6",
+    "file-loader": "0.11.1",
+    "html-webpack-plugin": "2.28.0",
+    "jsonwebtoken": "7.4.0",
+    "less": "2.7.2",
+    "less-loader": "4.0.3",
+    "mongoose": "4.9.4",
+    "morgan": "1.7.0",
+    "multer": "1.3.0",
+    "optimize-css-assets-webpack-plugin": "1.3.1",
+    "postcss-loader": "1.3.3",
+    "precss": "1.4.0",
+    "react": "15.5.4",
+    "react-custom-scrollbars": "4.1.1",
+    "react-dom": "15.5.4",
+    "react-hot-loader": "3.0.0-beta.6",
+    "react-redux": "5.0.4",
+    "react-router": "4.1.1",
+    "react-router-dom": "4.1.1",
+    "redux": "3.6.0",
+    "redux-devtools": "3.4.0",
+    "redux-devtools-dock-monitor": "1.1.2",
+    "redux-devtools-log-monitor": "1.3.0",
+    "serve-favicon": "2.3.2",
+    "style-loader": "0.16.1",
+    "underscore": "1.8.3",
+    "url-loader": "0.5.8",
+    "webpack": "2.3.3",
+    "webpack-chunk-hash": "0.4.0",
+    "webpack-dev-server": "2.4.2"
   }
 }
