--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "style-loader": "0.16.1",
     "underscore": "1.8.3",
     "url-loader": "0.5.8",
+    "uuid": "^3.0.1",
     "webpack": "2.3.3",
     "webpack-chunk-hash": "0.4.0",
     "webpack-dev-server": "2.4.2"
