--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-devtools": "3.4.0",
     "redux-devtools-dock-monitor": "1.1.2",
     "redux-devtools-log-monitor": "1.3.0",
+    "redux-persist": "^4.8.0",
     "serve-favicon": "2.3.2",
     "style-loader": "0.16.1",
     "underscore": "1.8.3",
